# pr-check

./: .gitignore  README.md  pr-check.cabal
app/: Main.hs
src/: PrCheck.hs
test/: Spec.hs
