name:                pr-check
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/bhipple/pr-check#readme
license:             BSD3
license-file:        LICENSE
author:              Benjamin Hipple
maintainer:          benjamin.hipple@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PrCheck
  build-depends:       base >= 4.7 && < 5
                     , github
                     , text
                     , vector
                     , bytestring
  default-language:    Haskell2010

executable pr-check-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pr-check
  default-language:    Haskell2010

test-suite pr-check-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pr-check
                     , github
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bhipple/pr-check
